# tr_util_date_time

./: configure.ac
lib/tr_util_date_time/: configure.ac
lib/tr_util_date_time/m4/: tr_cxx_check_bsd_timegm.m4  tr_cxx_check_bsd_tm_gmtoff.m4  tr_cxx_check_c11_gmtime_s.m4  tr_cxx_check_c11_localtime_s.m4  tr_cxx_check_posix_gmtime_r.m4  tr_cxx_check_posix_localtime_r.m4  tr_cxx_check_posix_setenv.m4  tr_cxx_check_posix_tzset.m4  tr_cxx_check_posix_unsetenv.m4  tr_cxx_check_windows__mkgmtime.m4  tr_cxx_check_windows__tzset.m4  tr_cxx_check_windows_gmtime_s.m4  tr_cxx_check_windows_localtime_s.m4
lib/tr_util_date_time/src/: Makefile.am  tr_util_date_time_funcwrapper.cc  tr_util_date_time_funcwrapper.hh  tr_util_date_time_tz.cc  tr_util_date_time_tz.hh
src/: Makefile.am  sample.cc
